--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -13,7 +13,10 @@
   --primitives-color-slate-61: #849eb3;
   --primitives-color-slate-75: #aac1d3;
   --primitives-color-slate-91: #e0e8ef;
+  --primitives-color-slate-96: #f2f5f8;
   --primitives-color-slate-100: #ffffff;
+  --primitives-color-slate-13a: rgba(22, 32, 46, 0.33);
+  --primitives-color-slate-61a: rgba(132, 158, 179, 0.33);
   --primitives-color-red-20: #660025;
   --primitives-color-red-40: #cc004b;
   --primitives-color-red-50: #ff005c;
@@ -42,7 +45,7 @@
   --primitives-color-orange-40: #cc3d00;
   --primitives-color-orange-50: #ff4d00;
   --primitives-color-orange-85: #ffc9b2;
-  --primitives-color-yellow-20: #664900;
+  --primitives-color-yellow-20: #662b00;
   --primitives-color-yellow-40: #cc8700;
   --primitives-color-yellow-50: #ffc700;
   --primitives-color-yellow-85: #ffeeb2;
@@ -58,14 +61,22 @@
   --primitives-typography-size-ui-small: 12px;
   --primitives-typography-size-ui-medium: 14px;
   --primitives-typography-size-ui-large: 18px;
-  --primitives-typography-size-body-large: 18px;
+  --primitives-typography-size-body-large: 21px;
   --primitives-typography-size-body-medium: 14px;
   --primitives-typography-size-body-small: 12px;
-  --primitives-typography-size-heading-heading-3: 22px;
-  --primitives-typography-size-heading-heading-2: 30px;
-  --primitives-typography-size-heading-heading-1: 40px;
+  --primitives-typography-size-heading-heading-3: 24px;
+  --primitives-typography-size-heading-heading-2: 36px;
+  --primitives-typography-size-heading-heading-1: 48px;
+  --primitives-typography-size-display-default: 64px;
+  --primitives-typography-size-display-large: 80px;
   --primitives-typography-weight-default: 400;
   --primitives-typography-weight-bold: 600;
   --primitives-typography-font-family-body: Quicksand;
-  --primitives-typography-font-family-heading: Nixie One;
+  --primitives-typography-font-family-heading: Overpass;
+  --primitives-typography-line-height-ui: 110;
+  --primitives-typography-line-height-body: 20;
+  --primitives-typography-line-height-heading: 120;
+  --primitives-typography-line-height-body-small: 18;
+  --primitives-typography-line-height-body-large: 28;
+  --primitives-typography-line-spacing-body: 16px;
 }
