--- a/src/styles/tokens.typography.css
+++ b/src/styles/tokens.typography.css
@@ -3,45 +3,45 @@
  */
 
 .type-heading-1 {
-  font-family: 'Nixie One';
-  font-size: 40px;
-  font-weight: 400;
+  font-family: Overpass;
+  font-size: 48px;
+  font-weight: 600;
   line-height: normal;
 }
 
 .type-heading-2 {
-  font-family: 'Nixie One';
-  font-size: 30px;
-  font-weight: 400;
+  font-family: Overpass;
+  font-size: 36px;
+  font-weight: 600;
   line-height: normal;
 }
 
 .type-heading-3 {
-  font-family: 'Nixie One';
-  font-size: 22px;
-  font-weight: 400;
+  font-family: Overpass;
+  font-size: 24px;
+  font-weight: 600;
   line-height: normal;
 }
 
 .type-body-large {
   font-family: Quicksand;
-  font-size: 18px;
+  font-size: 21px;
   font-weight: 400;
-  line-height: normal;
+  line-height: 28px;
 }
 
 .type-body {
   font-family: Quicksand;
   font-size: 14px;
   font-weight: 400;
-  line-height: normal;
+  line-height: 20px;
 }
 
 .type-body-small {
   font-family: Quicksand;
   font-size: 12px;
   font-weight: 400;
-  line-height: normal;
+  line-height: 18px;
 }
 
 .type-ui-large {
@@ -61,6 +61,27 @@
 .type-ui-small {
   font-family: Quicksand;
   font-size: 12px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.type-display {
+  font-family: Overpass;
+  font-size: 64px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.type-display-l {
+  font-family: Overpass;
+  font-size: 80px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.type-eyebrow {
+  font-family: Quicksand;
+  font-size: 14px;
   font-weight: 600;
   line-height: normal;
 }
